--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,5 +5,6 @@ description = ""
 authors = ["Your Name <you@example.com>"]
 requires-python = ">=3.11"
 dependencies = [
+    "npm>=0.1.1",
     "pytest>=8.4.1",
 ]
