--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -23,5 +23,5 @@ jobs:
       run: |
         git config --global user.email "hariharank@karunya.edu.in"
         git config --global user.name "hariharank14"
-        git remote add replit https://username:${{ secrets.REPLIT_TOKEN }}@git.replit.com/30cd2a28-371a-487e-bfec-17cc53fbf001
+        git remote add replit https://username:${{ secrets.REPLIT_TOKEN }}@git.replit.com/hariharank14
         git push replit main --force
