--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,9 +19,4 @@ jobs:
     - name: Run tests
       run: npm test
 
-    - name: Deploy to Replit
-      run: |
-        git config --global user.email "haranh503@gmail.com"
-        git config --global user.name "hariharank14"
-        git remote add replit https://username:${{ secrets.REPLIT_TOKEN }}@git.replit.com/hariharank14
-        git push replit main --force
+    # 🚫 REMOVE Replit deploy step — not needed and causes errors
